--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
       from a filter. Save your favourite combos.
     </p>
     <div class="flex flex-wrap">
+      <!-- Column 1   -->
       <section
         class="
           m-2
@@ -82,9 +83,9 @@
         </h3>
         <div class="flex justify-center">
           <button
+            id="generate-button"
             class="
               hover:bg-indigo-900
-              h-24
               inline
               text-white
               rounded-md
@@ -93,21 +94,7 @@
               bg-red-600
             "
           >
-            Pick a random movie
-          </button>
-          <button
-            class="
-              hover:bg-indigo-900
-              h-24
-              inline
-              text-white
-              rounded-md
-              p-2
-              m-2
-              bg-red-600
-            "
-          >
-            Pick a random meal
+            Generate your night in
           </button>
         </div>
 
@@ -127,15 +114,15 @@
         <div class="flex justify-center menu mb-8">
           <form action="#">
             <fieldset>
-              <label for="salutation">Dietary Requirements</label>
-              <select name="salutation" id="diet">
+              <label for="diet">Dietary Requirements</label>
+              <select name="diet" id="diet">
                 <option disabled selected>Please pick one</option>
                 <option>Vegetarian</option>
                 <option>Vegan</option>
                 <option>Dessert</option>
               </select>
-              <label for="salutation">Genre</label>
-              <select name="salutation" id="genre">
+              <label for="genre">Genre</label>
+              <select name="genre" id="genre">
                 <option disabled selected>Please pick one</option>
                 <option>Action</option>
                 <option>Comedy</option>
@@ -143,26 +130,27 @@
                 <option>Family</option>
                 <option>Romance</option>
               </select>
-              <label for="salutation">Rating</label>
-              <select name="salutation" id="rating">
+              <label for="rating">Rating</label>
+              <select name="rating" id="rating">
                 <option disabled selected>Please pick one</option>
-                <option>Top 250</option>
-                <option>9+</option>
-                <option>8+</option>
-                <option>7+</option>
+                <option>G</option>
+                <option>PG</option>
+                <option>M</option>
+                <option>MA</option>
+                <option>R</option>
               </select>
             </fieldset>
           </form>
         </div>
         <div class="flex justify-center">
           <button
+            id="filter-button"
             class="
               hover:bg-indigo-900
               text-white
-              rounded-md
-              p-4
+              rounded-lg
+              p-2
               bg-red-600
-              w-1/2
               mb-4
             "
           >
@@ -170,6 +158,7 @@
           </button>
         </div>
       </section>
+      <!-- Column 2  -->
       <section
         class="
           m-2
@@ -243,6 +232,7 @@
           </p>
         </div>
       </section>
+      <!-- Column 3  -->
       <section
         class="
           m-2
