--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
           lg:flex-1
           xl:flex-1
           2xl:flex-1
-          border-solid border-4 border-white
+          border-solid border-2 border-white
           rounded-lg
         "
       >
@@ -169,7 +169,7 @@
           lg:flex-1
           xl:flex-1
           2xl:flex-1
-          border-solid border-4 border-white
+          border-solid border-2 border-white
           rounded-lg
         "
       >
@@ -193,18 +193,36 @@
           height="auto"
           class="py-2 px-4 mx-auto block"
         />
+        <div id="movie-title" class="w-full">
+        <h4 class="text-white text-xl font-semibold p-2 text-2xl text-center border-2 border-solid border-white rounded-lg mx-4">
+          Dodgeball
+        </h4>
+      </div>
+        <div id="overview" class="m-4 text-center bg-white rounded-md">
+          
+          <p class="py-2 px-4">
+            Praesent sapien massa, convallis a pellentesque nec, egestas non
+            nisi. Vestibulum ante ipsum primis in faucibus orci luctus et
+            ultrices posuere cubilia Curae; Donec velit neque, auctor sit amet.
+          </p>
+        </div>
         <img
           src="assets/images/pizza-1327877.jpeg"
           width="200px"
           height="auto"
           class="py-2 px-4 mx-auto block"
         />
-        <div class="mx-auto text-center">
-          <h4 class="text-xl font-semibold p-2 text-2xl">
-            Dodgeball & Pepperoni Pizza
-          </h4>
+        <div id="recipe-title" class="w-full">
+        <h4 class="text-white text-xl font-semibold p-2 text-2xl text-center border-2 border-white border-white rounded-lg mx-4">
+          Pepperoni Pizza
+        </h4>
+      </div>
+          <div class="m-4 text-center bg-white rounded-md">
+          
+          <div class="m-4 text-center bg-white rounded-md">
           <h3 class="font-semibold">Ingredients</h3>
           <p class="py-2 px-4">
+            <ul id="ingredients" >
             Praesent sapien massa, convallis a pellentesque nec, egestas non
             nisi. Vestibulum ante ipsum primis in faucibus orci luctus et
             ultrices posuere cubilia Curae; Donec velit neque, auctor sit amet
@@ -213,9 +231,11 @@
             convallis at tellus. Vestibulum ante ipsum primis in faucibus orci
             luctus et ultrices posuere cubilia Curae; Donec velit neque, auctor
             sit amet aliquam vel, ullamcorper sit amet ligula.
+            </ul>
           </p>
           <h3 class="font-semibold">Method</h3>
           <p class="py-2 px-4">
+            <div id="method" >
             Vestibulum ante ipsum primis in faucibus orci luctus et ultrices
             posuere cubilia Curae; Donec velit neque, auctor sit amet aliquam
             vel, ullamcorper sit amet ligula. Quisque velit nisi, pretium ut
@@ -229,6 +249,7 @@
             Vestibulum ante ipsum primis in faucibus orci luctus et ultrices
             posuere cubilia Curae; Donec velit neque, auctor sit amet aliquam
             vel, ullamcorper sit amet ligula.
+          </div>
           </p>
         </div>
       </section>
@@ -241,7 +262,7 @@
           lg:flex-1
           xl:flex-1
           2xl:flex-1
-          border-solid border-4 border-white
+          border-solid border-2 border-white
           rounded-lg
         "
       >
