Update to script.js and chris.js

--- a/index.html
+++ b/index.html
@@ -212,9 +212,10 @@
           width="200px"
           height="auto"
           class="py-2 px-4 mx-auto block"
+          id = "food-poster"
         />
         <div id="recipe-title" class="w-full">
-        <h4 class="text-white text-xl font-semibold p-2 text-2xl text-center border-2 border-white border-white rounded-lg mx-4">
+        <h4 id = "recipe-heading" class="text-white text-xl font-semibold p-2 text-2xl text-center border-2 border-white border-white rounded-lg mx-4">
           Pepperoni Pizza
         </h4>
       </div>
@@ -236,7 +237,7 @@
           </p>
           <h3 class="font-semibold">Method</h3>
           <p class="py-2 px-4">
-            <div id="method" >
+            <ul id="method" >
             Vestibulum ante ipsum primis in faucibus orci luctus et ultrices
             posuere cubilia Curae; Donec velit neque, auctor sit amet aliquam
             vel, ullamcorper sit amet ligula. Quisque velit nisi, pretium ut
@@ -250,7 +251,7 @@
             Vestibulum ante ipsum primis in faucibus orci luctus et ultrices
             posuere cubilia Curae; Donec velit neque, auctor sit amet aliquam
             vel, ullamcorper sit amet ligula.
-          </div>
+            </ul>
           </p>
         </div>
       </section>
@@ -351,5 +352,6 @@
       <h4>This is the footer</h4>
     </footer>
     <script src="assets/js/script.js" async defer></script>
+    <script src="assets/js/chris.js" async defer></script>
   </body>
 </html>
