read more feature

--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
         >
           Your fun night in begins here!
         </h3>
-        <img
+        <img id="Movieposter"
           src="assets/images/dodgeball placeholder.jpg"
           width="200px"
           height="auto"
@@ -234,8 +234,8 @@
             </ul>
           </p>
           <h3 class="font-semibold">Method</h3>
-          <p class="py-2 px-4">
-            <div id="method" >
+          <div class="py-2 px-4">
+            <p class="readmore" id="method" >
             Vestibulum ante ipsum primis in faucibus orci luctus et ultrices
             posuere cubilia Curae; Donec velit neque, auctor sit amet aliquam
             vel, ullamcorper sit amet ligula. Quisque velit nisi, pretium ut
@@ -249,8 +249,9 @@
             Vestibulum ante ipsum primis in faucibus orci luctus et ultrices
             posuere cubilia Curae; Donec velit neque, auctor sit amet aliquam
             vel, ullamcorper sit amet ligula.
-          </div>
+            <span class="readmore-link"></span> 
           </p>
+        </div>
         </div>
       </section>
       <!-- Column 3  -->
@@ -350,5 +351,6 @@
       <h4>This is the footer</h4>
     </footer>
     <script src="assets/js/script.js" async defer></script>
+    <script src="assets/js/readmore.js" async defer></script>
   </body>
 </html>
