--- a/index.html
+++ b/index.html
@@ -240,9 +240,6 @@
           <div class="py-2 px-4">
             <p class="readmore" id="method" >
 
-          <p class="py-2 px-4">
-            <ul id="method" >
-
             Vestibulum ante ipsum primis in faucibus orci luctus et ultrices
             posuere cubilia Curae; Donec velit neque, auctor sit amet aliquam
             vel, ullamcorper sit amet ligula. Quisque velit nisi, pretium ut
@@ -255,13 +252,11 @@
             dui. Quisque velit nisi, pretium ut lacinia in, elementum id enim.
             Vestibulum ante ipsum primis in faucibus orci luctus et ultrices
             posuere cubilia Curae; Donec velit neque, auctor sit amet aliquam
-            vel, ullamcorper sit amet ligula.
+            vel, ullamcorper sit amet ligula.            
 
-            <span class="readmore-link"></span> 
-
-            </ul>
-
-          </p>
+            <!-- <span class="readmore-link"></span>  -->
+            </p>
+            
         </div>
         </div>
       </section>
