Deleted second id for movie poster

--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
         >
           Your fun night in begins here!
         </h3>
-        <img id="Movieposter"
+        <img 
           src="assets/images/dodgeball placeholder.jpg"
           width="200px"
           height="auto"
