--- a/index.html
+++ b/index.html
@@ -223,9 +223,8 @@
           </p>
           <h3 class="p-2 font-semibold">Method</h3>
 
-          <div class="p-2">
-            <p class="readmore" id="method" >
-
+          <div class="p-2 readmore">
+            <p id="method" >
             Vestibulum ante ipsum primis in faucibus orci luctus et ultrices
             posuere cubilia Curae; Donec velit neque, auctor sit amet aliquam
             vel, ullamcorper sit amet ligula. Quisque velit nisi, pretium ut
@@ -239,10 +238,8 @@
             Vestibulum ante ipsum primis in faucibus orci luctus et ultrices
             posuere cubilia Curae; Donec velit neque, auctor sit amet aliquam
             vel, ullamcorper sit amet ligula.            
-
-            <!-- <span class="readmore-link"></span>  -->
             </p>
-            
+            <div class="readmore-link"></div> 
         </div>
         </div>
       </section>
