button hover fix

--- a/index.html
+++ b/index.html
@@ -221,10 +221,13 @@
       italic
     ">Recipes</h4>
       <div class="flex flex-wrap" id="fav-recipes"></div>
+      <div id= "clear-history" class="text-center">
+      <button class ="p-4 text-white underline">Clear all</button>
+      </div>
     </section>
   </div>
   <footer class="text-center text-blue-900 w-full h-24 mt-2">
-    <h4>This is the footer</h4>
+    <h4>Made by Purple Cobras</h4>
   </footer>
   <script src="assets/js/script.js" async defer></script>
 
