--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
         Your fun night in begins here!
 
       </h3>
-      <div id="hidden" class="hidden">
+      <div id="hiddenMovie" class="hidden">
         <div class="w-full text-center">
           <img src="" width="200px" height="auto" class="p-4 mx-auto text-center" id="MoviePoster" />
         </div>
@@ -149,6 +149,8 @@
           <p id="overview" class="p-4">
           </p>
         </div>
+        </div>
+        <div id="hiddenRecipe" class="hidden">
         <div class="w-full text-center">
           <img src="" width="200px" height="auto" class="p-4 mx-auto text-center" id="food-poster" />
         </div>
