recipe measurement fix

--- a/index.html
+++ b/index.html
@@ -162,13 +162,13 @@
             <img src="assets/images/icons8-save-50.png">
           </button>
         </div>
-        <div class="p-4 m-4 text-center bg-white rounded-md">
-          <h3 class="font-semibold">Ingredients</h3>
+        <div class="p-4 m-4 bg-white rounded-md">
+          <h3 class="text-center font-semibold">Ingredients</h3>
           <p class="p-2">
           <ul class="p-2" id="ingredients">
           </ul>
           </p>
-          <h3 class="p-2 font-semibold">Method
+          <h3 class="text-center p-2 font-semibold">Method
           </h3>
           <div class="p-2 readmore">
             <p id="method">
