consolidate code & clean up

--- a/index.html
+++ b/index.html
@@ -69,23 +69,23 @@
           <fieldset>
             <label for="diet">Dietary Requirements</label>
             <select name="diet" id="diet">
-              <option disabled selected>Pick one or none</option>
-              <option>Vegetarian</option>
-              <option>Vegan</option>
-              <option>Dessert</option>
+              <option value="">None</option>
+              <option value="Vegetarian">Vegetarian</option>
+              <option value="Vegan">Vegan</option>
+              <option value="Dessert">Dessert</option>
             </select>
             <label for="genre">Genre</label>
             <select name="genre" id="genre">
-              <option disabled selected>Pick one or none</option>
+              <option value="">None</option>
               <option value="Action">Action</option>
-              <option id="Comedy">Comedy</option>
+              <option value="Comedy">Comedy</option>
               <option value="Drama">Drama</option>
               <option value="Family">Family</option>
               <option value="Romance">Romance</option>
             </select>
             <label for="rating">Release Decade</label>
             <select name="releaseperiod" id="releaseperiod">
-              <option disabled selected>Pick one or none</option>
+              <option value="">None</option>
               <option>2011 - 2021</option>
               <option>2000 - 2010</option>
               <option>1989 - 1999</option>
@@ -230,12 +230,5 @@
     <h4>Made by Purple Cobras</h4>
   </footer>
   <script src="assets/js/script.js" async defer></script>
-
-  <script src="assets/js/readmore.js" async defer></script>
-
-  <!-- <script src="assets/js/chris.js" async defer></script> -->
-
-  <script src="assets/js/localstorage.js" async defer></script>
-
 </body>
 </html>
