added loading animation to generate button

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         </form>
       </div>
       <div class="text-center">
-        <button id="generate-button" class="
+        <button type="button" id="generate-button" class="
               hover:bg-indigo-900
               inline
               text-white
@@ -102,8 +102,9 @@
               p-2
               m-2
               bg-red-600
-            ">
-          Generate your night in
+              button
+              ">
+          <span class = "button__text">Generate your night in</span>
         </button>
       </div>
     </section>
